@@ -1,3 +1,8 @@
+2014-02-13 Riccardo Mottola <rm@gnu.org>
+
+	* DBSoap.m (describeSObject)
+	Fix array bounds during retrival of record type names in describe.
+
 2013-12-13 Riccardo Mottola <rm@gnu.org>
 
 	* DBSObject.h
